tester/testsuite/extensions/objects1/bad/bad005.jl
/* new undeclared class */

void main() {
	new Point;
}
